@@ -1,3 +1,3 @@
 FHEM Tablet UI last changes:
  2019-06-05
- - update of widget weather
+ - fixed widget homestatus bug, that caused a number to appear in the middle
